@@ -2,6 +2,7 @@ The following changes have been made between John 1.7.5.1 and 1.7.5.2:
 
 * Optional parallelization for the OpenBSD-style Blowfish-based crypt(3)
 (bcrypt) hashes with OpenMP has been added.
+* The obsolete 32-bit SPARC assembly implementation of DES has been dropped.
 
 The following changes have been made between John 1.7.5 and 1.7.5.1:
 
@@ -149,4 +150,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.42 2010/05/25 08:05:15 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.43 2010/05/26 04:41:06 solar Exp $
